--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "rm -rf docs && react-scripts build && cp -r build docs",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
