--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "tslint": "^6.1.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
@@ -22,7 +21,7 @@
     "build": "rm -rf docs && react-scripts build && cp -r build docs",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "node ./node_modules/tslint/bin/tslint --project . --fix"
+    "lint": "node node_modules/eslint/bin/eslint.js . --ext .ts,.tsx,.js,.jsx --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,5 +37,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
+    "eslint": "^6.8.0"
   }
 }
