--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "homepage": "https://chadlavi.github.io/turnip/",
   "private": true,
   "dependencies": {
-    "@chadlavi/clear": "^0.12.0",
+    "@chadlavi/clear": "^0.12.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -23,7 +23,8 @@
     "build": "rm -rf docs && react-scripts build && cp -r build docs",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "node node_modules/eslint/bin/eslint.js . --ext .ts,.tsx,.js,.jsx --fix"
+    "lint": "node node_modules/eslint/bin/eslint.js . --ext .ts,.tsx,.js,.jsx --fix",
+    "deploy": "npm run build && git add . && git commit -am 'deploy new build' && git push"
   },
   "eslintConfig": {
     "extends": "react-app"
